user-list page done

--- a/.eslintrc
+++ b/.eslintrc
@@ -29,6 +29,7 @@
     "linebreak-style": 0,
     "react/prop-types": 0,
     "jsx-a11y/click-events-have-key-events": 0,
+    "no-unused-vars": 0,
     "react/jsx-filename-extension": [
       1,
       {
